<resources>
    <string name="app_name">GuideMe</string>

    <string name="tab_text_1">Dashboard</string>
    <string name="tab_text_2">Settings</string>

    <string name="battery_display_heading">Battery</string>
    <string name="time_remain_heading">Time Remaining:</string>

    <string name="vibration_setting_header">Vibration Strength</string>
    <string name="vibration_default">XYZ%</string>
    <string name="vibration_min">Weak</string>
    <string name="vibration_max">Strong</string>
    <!--<string name="vibration_off">Turn </string>-->
    <string name="distance_setting_header">Distance Detection</string>
    <string name="distance_default">XYZ m</string>
    <string name="distance_min">1.0 m</string>
    <string name="distance_max">4.5 m</string>

    <string name="find_device">Find GuideMe Glove Device \n (disconnected)</string>
    <string name="connecting_device">Connecting to GuideMe Glove Device \n ....</string>
    <string name="connected_device">Connected to GuideMe Glove Device:\n</string>

    <string name="action_settings">Settings</string>

    <string name="no_bluetooth">No bluetooth found</string>
    <string name="action_quit">Quit</string>

</resources>
